--- a/css/acceso-0d0e2f.webflow.css
+++ b/css/acceso-0d0e2f.webflow.css
@@ -242,6 +242,7 @@ blockquote {
 }
 
 .button-main {
+  width: 210px;
   padding: 14px 44px;
   border: 1px solid transparent;
   border-radius: 50px;
@@ -253,6 +254,9 @@ blockquote {
   line-height: 1.75em;
   font-weight: 500;
   text-transform: capitalize;
+  margin: 8px;
+  justify-content: center;
+  
 }
 
 .button-service {
@@ -733,7 +737,7 @@ blockquote {
 }
 
 .body-font {
-  margin-bottom: 0px;
+  margin-bottom: 10px;
   font-family: 'Tajawal', sans-serif;
   color: #6b6b6b;
   font-size: 1rem;
@@ -5235,9 +5239,10 @@ blockquote {
 .app-builder-process-main {
   position: relative;
   display: flex;
-  margin-top: 120px;
   align-items: center;
   grid-column-gap: 70px;
+  margin: 14;
+  flex-wrap: wrap;
 }
 
 .app-builder-process-image-wrapper {
@@ -12950,32 +12955,315 @@ blockquote {
   }
 }
 
-.carousel-container {
+* {
+  box-sizing: border-box;
+}
+
+
+
+.banner-cta {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
   max-width: 100%;
+  background-image: url('https://ebhc.com.br/wp-content/uploads/2018/10/imagem-office.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.banner-cta:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.banner-content {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 800px;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+
+}
+
+
+.text-wrapper {
+  text-align: center;
+  color: #fff;
+}
+
+.banner-content h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  opacity: 1;
+}
+
+.banner-content p {
+  font-size: 16px;
+  opacity: 1;
+}
+
+.cta-button {
+  background-color: #18ACE3;
+  color: #fff;
+  border: none;
+  padding: 14px 44px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 1;
+  margin-top: 10px;
+  border-radius: 50px;
+}
+
+
+@media (min-width: 768px) {
+  .banner-content {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: left;
+  }
+
+  .text-wrapper {
+    text-align: left;
+  }
+}
+
+.carousel-container {
+  position: static;
+  max-width: 100%;
+  overflow: hidden;
+  display: blox;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.carousel-wrapper {
+  width: 100%;
   overflow: hidden;
 }
 
 .carousel {
   display: flex;
-  flex-wrap: nowrap;
   transition: transform 0.5s ease;
+  scroll-behavior: smooth;
 }
 
-.card {
-  width: 300px;
-  height: 200px;
+.carousel-item {
+  flex: 0 0 32.70%;
+  width: 200px;
+  height: 500px;
   background-color: #eaeaea;
-  margin-right: 10px;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px;
+  padding: 30px;
+  text-align: center;
+}
+
+.carousel-item img {
+  max-width: 50%;
+  height: auto;
+  border-radius: 30px;
+  margin-bottom: 10px;
+}
+
+.carousel-content h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.carousel-content p {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.carousel-content a {
+  font-size: 14px;
+  text-decoration: none;
+  color: blue;
+}
+
+.carousel-navigation {
+  display: none;
+}
+
+.carousel-indicators {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.carousel-indicator {
+  width: 10px;
+  height: 10px;
+  background-color: gray;
+  border-radius: 50%;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.carousel-indicator.active {
+  background-color: black;
 }
 
 @media (max-width: 767px) {
   .carousel {
-    overflow-x: scroll;
+ 
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    padding-bottom: 10px;
   }
   
-  .card {
-    margin-right: 0;
+  .carousel-item {
+    flex: 0 0 99%;
+    width: 200px;
+    height: 350px;
+    margin-right: 183px;
+  }
+  
+  .carousel-navigation {
+    display: flex;
+    justify-content: center;
+    margin-top: 8px;
+  }
+  
+  .carousel-indicators {
+    justify-content: flex-start;
+  }
+  
+  .carousel-indicator {
+    margin-right: 5px;
+  }
+}
+
+@media (min-width: 768px) {
+  .carousel-item {
+    margin-right: 8px;
   }
 }
 
 
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+  margin: 0 auto;
+  
+}
+
+.card {
+  width: calc(44.33% - 50px);
+  height: 100px;
+  margin: 10px;
+  background-color: #eaeaea;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.card1 {
+  width: calc(66.66% - 10px);
+  height: 300px;
+  padding-left: 12px;
+  padding-top: 30px;
+  padding-bottom: 100px;
+}
+
+.card2,
+.card3 {
+  width: calc(33.33% - 10px);
+  height: 300px;
+  padding-left: 12px;
+  padding-top: 30px;
+  padding-bottom: 100px;
+}
+
+.card img {
+  width: 20%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+}
+
+.card-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.card p {
+  font-size: 14px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.card a {
+  font-size: 14px;
+  text-decoration: none;
+  color: blue;
+}
+
+@media (max-width: 767px) {
+  .card {
+    width: calc(100% - 20px);
+  }
+
+  .card1,
+  .card2,
+  .card3 {
+    height: auto;
+  }
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.column {
+  width: 300px;
+  margin: 10px;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+}
