--- a/css/acceso-0d0e2f.webflow.css
+++ b/css/acceso-0d0e2f.webflow.css
@@ -12968,7 +12968,7 @@ blockquote {
   align-items: center;
   height: 250px;
   max-width: 100%;
-  background-image: url('https://ebhc.com.br/wp-content/uploads/2018/10/imagem-office.jpg');
+  background-image: url('../images/AC_Banner_Contacto.jpg');
   background-size: cover;
   background-position: center;
 }
